maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: 'case' expected but identifier found.
				droite()
                                ^Escaper:11: error: '}' expected but ';' found.
				case true => droite()
^Escaper:11: error: '}' expected but 'case' found.
				case true => droite()
                                ^Escaper:13: error: '}' expected but 'case' found.
				case false => avance()
                                ^Escaper:17: error: ';' expected but 'else' found.
		}else{
                 ^Escaper:21: error: eof expected but '}' found.
}
^