maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while(true){nord()}
	
}
def nord(){
	while(get(y) != 0){
		if(getDirection == Direction.NORTH){
			estFaceMur() match{
				droite()
				case true => droite()
							 
				case false => avance()
			}
		
		
		}else{
			gauche()
		}
	}
}

